--- a/MVCwebside/appsettings.json
+++ b/MVCwebside/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MVCwebside-24b79b5e-9881-4cbf-8c28-bf3051af246f;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MVCwebside-24b79b5e-9881-4cbf-8c28-bf3051af246f;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Northwind": "Data Source=.;Initial Catalog=Northwind;Integrated Security=True"
+    
   },
   "Logging": {
     "LogLevel": {
